3.4.2
- a bug with backslashes stripping was solved (bug #2853694)
- a typo was fixed in P4A_DB (profiler activation)

3.4.1
- strong/em are now supported by P4A tooltips
- DSN charset support was added to set DB connection charset
- Zend Framework was updated to 1.9.2
- jquery::maskedInput plugin was updated to 1.2.2
- P4A_Object::__call() method was changed from private to public for PHP 5.3 compliance
- P4A_Tab_Pane's CSS padding was changed a bit to fix a rendering bug on firefox/chrome
- P4A_DB_PROFILE constant was added, it will output every query executed on every DB

3.4.0
- Zend Framework was updated to 1.8.4
- jQuery was updated to 1.3.2
- jQuery UI was updated to 1.7.2
- P4A_Tab_Pane was converted to jQuery UI
- P4A_Fieldset and P4A_Tab_Pane now have rounder borders
- a note about handling dates with Oracle was added to the README file
- outline CSS property was removed
- If magic_quotes_gpc are enebled P4A strips out all slashes from $_POST,
  $_GET, $_COOKIE and $_REQUEST
- P4A_Dir_Navigator widget was added
- P4A_Widget::composeStringActions() method now uses
  P4A_Quote_Javascript_String()
- a bug with P4A_Dir_Source and hidden files was solved
- P4A_Dir_Source::getNumRows() method was added
- P4A_I18N::format() support for "filesize" data type was added
- P4A_Dir_Source now supports file size and last modification time
- P4A_Dir_Source's cache was removed due to refactoring
- P4A_Simple_Edit_Mask now supports empty $source constructor param
  (default is the mask name)
- P4A_Progress_Bar widget was added
- P4A footer was moved to allow better centering when sidebars are visible
- when uploading a file, it will have a temporary file until the corresponding
  record won't be saved
- a bug with P4A_Strip_Double_Backslashes global function was fixed
  (thanks to bobkoure)
- a bug with Zend_Framework and Oracle was fixed (stripped zend_db_rownum column)
- P4A_DB_Navigator now can work also without recursor (flat list is shown)